# sbs_test

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  Procfile  RAILWAY_DEPLOYMENT.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml  railway.json  railway.toml
backend/: Dockerfile  Dockerfile.prod  Procfile  Procfile.backup  Procfile.simple  cloud_storage_example.py  evaluations_data.json  main.py  main.py.backup  main_new.py  main_railway.py  main_simple.py  main_test.py  main_very_simple.py  nixpacks.toml  railway.toml  requirements.cloud.txt  requirements.txt  start.sh  tasks_data.json
backend/api/: folders.py  models.py  schemas.py  tasks.py
backend/api/routes/: evaluations.py  folders.py  statistics.py  tasks.py
backend/database/: database.py
backend/schemas/: folder.py  task.py
backend/static/: .gitkeep
backend/utils/: file_utils.py  video_matcher.py
frontend/: Dockerfile  index.html  nginx.conf  nixpacks.toml  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/api/: taskApi.ts
frontend/src/components/: Layout.tsx
frontend/src/config/: api.ts
frontend/src/pages/: BlindTestPage.tsx  CreateTaskPage.tsx  FolderManagePage.tsx  HomePage.tsx  ResultsPage.tsx  ReviewResultsPage.tsx  StatisticsPage.tsx  TaskListPage.tsx
frontend/src/stores/: taskStore.ts
frontend/src/types/: index.ts
